@@ -25,7 +25,6 @@ import org.slf4j.LoggerFactory;
 import javax.management.openmbean.OpenType;
 import javax.management.openmbean.SimpleType;
 import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -80,12 +79,12 @@ public class AttributeNodeForConverterType<T> extends AbstractAttributeNodeForLe
 
 	@Override
 	public Map<String, OpenType<?>> getOpenTypes() {
-		return Collections.singletonMap(name, SimpleType.STRING);
+		return Map.of(name, SimpleType.STRING);
 	}
 
 	@Override
 	public List<JmxRefreshable> getAllRefreshables(@NotNull Object source) {
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	@Override
