@@ -35,7 +35,6 @@ import java.util.stream.Stream;
 
 import static io.activej.bytebuf.ByteBufStrings.wrapUtf8;
 import static io.activej.common.Utils.last;
-import static io.activej.common.Utils.setOf;
 import static io.activej.fs.LocalActiveFs.DEFAULT_TEMP_DIR;
 import static io.activej.fs.Utils.createEmptyDirectories;
 import static io.activej.promise.TestUtils.await;
@@ -74,30 +73,30 @@ public final class TestLocalActiveFs {
 		Files.createDirectories(clientPath);
 
 		Path f = clientPath.resolve("f.txt");
-		Files.write(f, "some text1\n\nmore text1\t\n\n\r".getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+		Files.writeString(f, "some text1\n\nmore text1\t\n\n\r", CREATE, TRUNCATE_EXISTING);
 
 		Path c = clientPath.resolve("c.txt");
-		Files.write(c, "some text2\n\nmore text2\t\n\n\r".getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+		Files.writeString(c, "some text2\n\nmore text2\t\n\n\r", CREATE, TRUNCATE_EXISTING);
 
 		Files.createDirectories(storagePath.resolve("1"));
 		Files.createDirectories(storagePath.resolve("2/3"));
 		Files.createDirectories(storagePath.resolve("2/b"));
 
 		Path a1 = storagePath.resolve("1/a.txt");
-		Files.write(a1, "1\n2\n3\n4\n5\n6\n".getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+		Files.writeString(a1, "1\n2\n3\n4\n5\n6\n", CREATE, TRUNCATE_EXISTING);
 
 		Path b = storagePath.resolve("1/b.txt");
-		Files.write(b, "7\n8\n9\n10\n11\n12\n".getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+		Files.writeString(b, "7\n8\n9\n10\n11\n12\n", CREATE, TRUNCATE_EXISTING);
 
 		Path a2 = storagePath.resolve("2/3/a.txt");
-		Files.write(a2, "6\n5\n4\n3\n2\n1\n".getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+		Files.writeString(a2, "6\n5\n4\n3\n2\n1\n", CREATE, TRUNCATE_EXISTING);
 
 		Path d = storagePath.resolve("2/b/d.txt");
 		StringBuilder sb = new StringBuilder();
 		for (int i = 0; i < 1_000_000; i++) {
 			sb.append(i + "\n");
 		}
-		Files.write(d, sb.toString().getBytes(UTF_8));
+		Files.writeString(d, sb.toString());
 
 		Path e = storagePath.resolve("2/b/e.txt");
 		try {
@@ -269,13 +268,7 @@ public final class TestLocalActiveFs {
 
 	@Test
 	public void testListFiles() {
-		Set<String> expected = setOf(
-				"1/a.txt",
-				"1/b.txt",
-				"2/3/a.txt",
-				"2/b/d.txt",
-				"2/b/e.txt"
-		);
+		Set<String> expected = Set.of("1/a.txt", "1/b.txt", "2/3/a.txt", "2/b/d.txt", "2/b/e.txt");
 
 		Map<String, FileMetadata> actual = await(client.list("**"));
 
@@ -284,11 +277,7 @@ public final class TestLocalActiveFs {
 
 	@Test
 	public void testGlobListFiles() {
-		Set<String> expected = setOf(
-				"2/3/a.txt",
-				"2/b/d.txt",
-				"2/b/e.txt"
-		);
+		Set<String> expected = Set.of("2/3/a.txt", "2/b/d.txt", "2/b/e.txt");
 
 		Map<String, FileMetadata> actual = await(client.list("2/*/*.txt"));
 
@@ -533,7 +522,7 @@ public final class TestLocalActiveFs {
 
 	@Test
 	public void testRelativePaths() {
-		Set<String> expected = setOf(
+		Set<String> expected = Set.of(
 				"1/a.txt",
 				"1/b.txt",
 				"2/3/a.txt",
