@@ -27,23 +27,20 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
 
-import static io.activej.common.Utils.*;
+import static io.activej.common.Utils.first;
 import static io.activej.eventloop.Eventloop.getCurrentEventloop;
 import static io.activej.fs.Utils.*;
 import static io.activej.promise.TestUtils.await;
 import static io.activej.promise.TestUtils.awaitException;
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.nio.file.StandardOpenOption.CREATE;
 import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
-import static java.util.Arrays.asList;
-import static java.util.Collections.*;
 import static java.util.concurrent.Executors.newSingleThreadExecutor;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -95,7 +92,7 @@ public final class TestLocalActiveFsInvariants {
 		await(secondLocalFs.start());
 		second = new DefaultActiveFs(secondLocalFs);
 
-		initializeDirs(asList(
+		initializeDirs(List.of(
 				"file",
 				"file2",
 				"directory/subdir/file3.txt",
@@ -106,7 +103,7 @@ public final class TestLocalActiveFsInvariants {
 
 	@Parameters(name = "{0}")
 	public static Collection<Object[]> getParameters() {
-		return Arrays.asList(
+		return List.of(
 				new Object[]{
 						"Regular",
 						(UnaryOperator<LocalActiveFs>) fs -> fs},
@@ -122,7 +119,7 @@ public final class TestLocalActiveFsInvariants {
 			for (String path : paths) {
 				Path file = firstPath.resolve(path);
 				Files.createDirectories(file.getParent());
-				Files.write(file, String.format("This is contents of file %s", file).getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+				Files.writeString(file, String.format("This is contents of file %s", file), CREATE, TRUNCATE_EXISTING);
 
 				Path copyOfFile = secondPath.resolve(path);
 				Files.createDirectories(copyOfFile.getParent());
@@ -256,7 +253,7 @@ public final class TestLocalActiveFsInvariants {
 	public void moveUpdatesTimestamp() {
 		both(client -> {
 			FileMetadata oldMeta = await(client.info("file"));
-			await(Promises.delay(getDelay(oldMeta.getTimestamp())));
+			await(Promises.delay(10));
 			await(client.move("file", "newFile"));
 			FileMetadata newMeta = await(client.info("newFile"));
 
@@ -355,7 +352,7 @@ public final class TestLocalActiveFsInvariants {
 	public void copyUpdatesTimestamp() {
 		both(fs -> {
 			FileMetadata oldMeta = await(fs.info("file"));
-			await(Promises.delay(getDelay(oldMeta.getTimestamp())));
+			await(Promises.delay(10));
 			await(fs.copy("file", "newFile"));
 			FileMetadata newMeta = await(fs.info("newFile"));
 
@@ -380,7 +377,7 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void deleteAllEmpty() {
 		List<Path> before = listPaths(firstPath);
-		both(client -> await(client.deleteAll(emptySet())));
+		both(client -> await(client.deleteAll(Set.of())));
 
 		assertEquals(before, listPaths(firstPath));
 		assertFilesAreSame(firstPath, secondPath);
@@ -388,7 +385,7 @@ public final class TestLocalActiveFsInvariants {
 
 	@Test
 	public void deleteAllSingleFile() {
-		both(client -> await(client.deleteAll(singleton("file"))));
+		both(client -> await(client.deleteAll(Set.of("file"))));
 
 		bothPaths(path -> assertThat(listPaths(path), not(contains(Paths.get("file")))));
 		assertFilesAreSame(firstPath, secondPath);
@@ -396,7 +393,7 @@ public final class TestLocalActiveFsInvariants {
 
 	@Test
 	public void deleteAllMultipleFiles() {
-		both(client -> await(client.deleteAll(setOf("file", "file2"))));
+		both(client -> await(client.deleteAll(Set.of("file", "file2"))));
 
 		bothPaths(path -> assertThat(listPaths(path), not(contains(Paths.get("file"), Paths.get("file2")))));
 		assertFilesAreSame(firstPath, secondPath);
@@ -406,8 +403,8 @@ public final class TestLocalActiveFsInvariants {
 	public void deleteAllSingleDirectory() {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
-			Exception exception = awaitException(client.deleteAll(singleton("directory")));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+			Exception exception = awaitException(client.deleteAll(Set.of("directory")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -418,8 +415,11 @@ public final class TestLocalActiveFsInvariants {
 	public void deleteAllMultipleDirectories() {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
-			Exception exception = awaitException(client.deleteAll(setOf("directory", "directory2")));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+			Exception exception = awaitException(client.deleteAll(Set.of("directory", "directory2")));
+			assertBatchException(exception, 1, 2, (name, e) -> {
+				assertTrue(name.startsWith("directory"));
+				assertThat(e, instanceOf(IsADirectoryException.class));
+			});
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -429,15 +429,15 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void deleteAllFilesAndDirectories() {
 		both(client -> {
-			Exception exception = awaitException(client.deleteAll(setOf("file", "directory")));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+			Exception exception = awaitException(client.deleteAll(Set.of("file", "directory")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("file"));
 	}
 
 	@Test
 	public void deleteAllWithNonExisting() {
-		both(client -> await(client.deleteAll(setOf("file", "nonexistent"))));
+		both(client -> await(client.deleteAll(Set.of("file", "nonexistent"))));
 
 		bothPaths(path -> assertThat(listPaths(path), not(contains(Paths.get("file")))));
 		assertFilesAreSame(firstPath, secondPath);
@@ -445,26 +445,26 @@ public final class TestLocalActiveFsInvariants {
 
 	@Test
 	public void deleteAllWithRoot() {
-		both(client -> await(client.deleteAll(setOf("file", ""))));
+		both(client -> await(client.deleteAll(Set.of("file", ""))));
 		assertFilesAreSame(firstPath, secondPath);
 	}
 
 	@Test
 	public void deleteAllWithFileOutsideRoot() {
 		both(client -> {
-			Exception exception = awaitException(client.deleteAll(setOf("file", "..")));
-			assertBatchException(exception, mapOf("..", ForbiddenPathException.class));
+			Exception exception = awaitException(client.deleteAll(Set.of("file", "..")));
+			assertBatchException(exception, Map.of("..", ForbiddenPathException.class));
 		});
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("file"));
 	}
 
 	@Test
 	public void deleteAllIsIdempotent() {
 		both(client -> {
-			await(client.deleteAll(setOf("file", "file2")));
-			await(client.deleteAll(setOf("file", "file2")));
-			await(client.deleteAll(setOf("file", "file2")));
-			await(client.deleteAll(setOf("file", "file2")));
+			await(client.deleteAll(Set.of("file", "file2")));
+			await(client.deleteAll(Set.of("file", "file2")));
+			await(client.deleteAll(Set.of("file", "file2")));
+			await(client.deleteAll(Set.of("file", "file2")));
 		});
 
 		bothPaths(path -> assertThat(listPaths(path), not(contains(Paths.get("file"), Paths.get("file2")))));
@@ -476,7 +476,7 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void copyAllEmpty() {
 		List<Path> before = listPaths(firstPath);
-		both(client -> await(client.copyAll(emptyMap())));
+		both(client -> await(client.copyAll(Map.of())));
 
 		assertEquals(before, listPaths(firstPath));
 		assertFilesAreSame(firstPath, secondPath);
@@ -484,7 +484,7 @@ public final class TestLocalActiveFsInvariants {
 
 	@Test
 	public void copyAllSingleFile() {
-		both(client -> await(client.copyAll(mapOf("file", "newFile"))));
+		both(client -> await(client.copyAll(Map.of("file", "newFile"))));
 
 		assertFileEquals(firstPath, secondPath, "file", "newFile");
 		assertFilesAreSame(firstPath, secondPath);
@@ -492,10 +492,7 @@ public final class TestLocalActiveFsInvariants {
 
 	@Test
 	public void copyAllMultipleFiles() {
-		both(client -> await(client.copyAll(mapOf(
-				"file", "newFile",
-				"file2", "newFile2"
-		))));
+		both(client -> await(client.copyAll(Map.of("file", "newFile", "file2", "newFile2"))));
 
 		assertFileEquals(firstPath, secondPath, "file", "newFile");
 		assertFileEquals(firstPath, secondPath, "file2", "newFile2");
@@ -506,8 +503,8 @@ public final class TestLocalActiveFsInvariants {
 	public void copyAllFromSingleDirectory() {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
-			Exception exception = awaitException(client.copyAll(mapOf("directory", "newFile")));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+			Exception exception = awaitException(client.copyAll(Map.of("directory", "newFile")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -518,8 +515,8 @@ public final class TestLocalActiveFsInvariants {
 	public void copyAllToSingleDirectory() {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
-			Exception exception = awaitException(client.copyAll(mapOf("file", "directory")));
-			assertBatchException(exception, mapOf("file", IsADirectoryException.class));
+			Exception exception = awaitException(client.copyAll(Map.of("file", "directory")));
+			assertBatchException(exception, Map.of("file", IsADirectoryException.class));
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -531,11 +528,12 @@ public final class TestLocalActiveFsInvariants {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"directory", "newDirectory",
-							"directory2", "newDirectory2"
-					)));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+					client.copyAll(Map.of("directory", "newDirectory", "directory2", "newDirectory2")));
+
+			assertBatchException(exception, 1, 2, (name, e) -> {
+				assertTrue(name.startsWith("directory"));
+				assertThat(e, instanceOf(IsADirectoryException.class));
+			});
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -546,87 +544,69 @@ public final class TestLocalActiveFsInvariants {
 	public void copyAllFilesAndDirectories() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"file", "newFile",
-							"directory", "newDirectory"
-					)));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+					client.copyAll(Map.of("file", "newFile", "directory", "newDirectory")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("newFile"));
 	}
 
 	@Test
 	public void copyAllWithFromNonExisting() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"file", "newFile",
-							"nonexistent", "newFile2"
-					)));
-			assertBatchException(exception, mapOf("nonexistent", FileNotFoundException.class));
+					client.copyAll(Map.of("file", "newFile", "nonexistent", "newFile2")));
+			assertBatchException(exception, Map.of("nonexistent", FileNotFoundException.class));
 		});
 
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("newFile"));
 	}
 
 	@Test
 	public void copyAllFromRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"file", "newFile",
-							"", "newRoot"
-					)));
-			assertBatchException(exception, mapOf("", IsADirectoryException.class));
+					client.copyAll(Map.of("file", "newFile", "", "newRoot")));
+			assertBatchException(exception, Map.of("", IsADirectoryException.class));
 		});
 
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("newFile"));
 	}
 
 	@Test
 	public void copyAllToRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"file", "newFile",
-							"file2", ""
-					)));
-			assertBatchException(exception, mapOf("file2", IsADirectoryException.class));
+					client.copyAll(Map.of("file", "newFile", "file2", "")));
+			assertBatchException(exception, Map.of("file2", IsADirectoryException.class));
 		});
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("newFile"));
 	}
 
 	@Test
 	public void copyAllToFileOutsideRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"file", "newFile",
-							"file2", "../new"
-					)));
-			assertBatchException(exception, mapOf("file2", ForbiddenPathException.class));
+					client.copyAll(Map.of("file", "newFile", "file2", "../new")));
+			assertBatchException(exception, Map.of("file2", ForbiddenPathException.class));
 		});
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("newFile"));
 	}
 
 	@Test
 	public void copyAllFromFileOutsideRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.copyAll(mapOf(
-							"file", "newFile",
-							"../new", "newFile2"
-					)));
-			assertBatchException(exception, mapOf("../new", ForbiddenPathException.class));
+					client.copyAll(Map.of("file", "newFile", "../new", "newFile2")));
+			assertBatchException(exception, Map.of("../new", ForbiddenPathException.class));
 		});
-		assertFilesAreSame(firstPath, secondPath);
+		assertFilesAreSame(firstPath, secondPath, Set.of("newFile"));
 	}
 
 	@Test
 	public void copyAllIsIdempotent() {
 		both(client -> {
-			await(client.copyAll(mapOf("file", "newFile", "file2", "newFile2")));
-			await(client.copyAll(mapOf("file", "newFile", "file2", "newFile2")));
+			await(client.copyAll(Map.of("file", "newFile", "file2", "newFile2")));
+			await(client.copyAll(Map.of("file", "newFile", "file2", "newFile2")));
 		});
 
 		assertFileEquals(firstPath, secondPath, "file", "newFile");
@@ -640,12 +620,9 @@ public final class TestLocalActiveFsInvariants {
 			FileMetadata oldMeta1 = await(client.info("file"));
 			FileMetadata oldMeta2 = await(client.info("file2"));
 
-			await(Promises.delay(getDelay(oldMeta1.getTimestamp())));
+			await(Promises.delay(10));
 
-			await(client.copyAll(mapOf(
-					"file", "newFile",
-					"file2", "newFile2"
-			)));
+			await(client.copyAll(Map.of("file", "newFile", "file2", "newFile2")));
 
 			FileMetadata newMeta1 = await(client.info("newFile"));
 			FileMetadata newMeta2 = await(client.info("newFile2"));
@@ -665,7 +642,7 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void moveAllEmpty() {
 		List<Path> before = listPaths(firstPath);
-		both(client -> await(client.moveAll(emptyMap())));
+		both(client -> await(client.moveAll(Map.of())));
 
 		assertEquals(before, listPaths(firstPath));
 		assertFilesAreSame(firstPath, secondPath);
@@ -675,7 +652,7 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllSingleFile() throws IOException {
 		byte[] bytesBefore = Files.readAllBytes(firstPath.resolve("file"));
 
-		both(client -> await(client.moveAll(mapOf("file", "newFile"))));
+		both(client -> await(client.moveAll(Map.of("file", "newFile"))));
 
 		bothPaths(path -> {
 			assertThat(listPaths(path), not(contains(Paths.get("file"))));
@@ -690,10 +667,7 @@ public final class TestLocalActiveFsInvariants {
 		byte[] bytesBefore1 = Files.readAllBytes(firstPath.resolve("file"));
 		byte[] bytesBefore2 = Files.readAllBytes(firstPath.resolve("file2"));
 
-		both(client -> await(client.moveAll(mapOf(
-				"file", "newFile",
-				"file2", "newFile2"
-		))));
+		both(client -> await(client.moveAll(Map.of("file", "newFile", "file2", "newFile2"))));
 
 		bothPaths(path -> {
 			assertThat(listPaths(path), not(contains(Paths.get("file"), Paths.get("file2"))));
@@ -708,8 +682,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllFromSingleDirectory() {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
-			Exception exception = awaitException(client.moveAll(mapOf("directory", "newFile")));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+			Exception exception = awaitException(client.moveAll(Map.of("directory", "newFile")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -720,8 +694,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllToSingleDirectory() {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
-			Exception exception = awaitException(client.moveAll(mapOf("file", "directory")));
-			assertBatchException(exception, mapOf("file", IsADirectoryException.class));
+			Exception exception = awaitException(client.moveAll(Map.of("file", "directory")));
+			assertBatchException(exception, Map.of("file", IsADirectoryException.class));
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -733,11 +707,12 @@ public final class TestLocalActiveFsInvariants {
 		List<Path> before = listPaths(firstPath);
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"directory", "newDirectory",
-							"directory2", "newDirectory2"
-					)));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+					client.moveAll(Map.of("directory", "newDirectory", "directory2", "newDirectory2")));
+
+			assertBatchException(exception, 1, 2, (name, e) -> {
+				assertTrue(name.startsWith("directory"));
+				assertThat(e, instanceOf(IsADirectoryException.class));
+			});
 		});
 
 		assertEquals(before, listPaths(firstPath));
@@ -748,11 +723,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllFilesAndDirectories() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"directory", "newDirectory"
-					)));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+					client.moveAll(Map.of("file", "newFile", "directory", "newDirectory")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
 	}
 
@@ -760,11 +732,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllWithFromNonExisting() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"nonexistent", "newFile2"
-					)));
-			assertBatchException(exception, mapOf("nonexistent", FileNotFoundException.class));
+					client.moveAll(Map.of("file", "newFile", "nonexistent", "newFile2")));
+			assertBatchException(exception, Map.of("nonexistent", FileNotFoundException.class));
 		});
 	}
 
@@ -772,11 +741,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllFromRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"", "newRoot"
-					)));
-			assertBatchException(exception, mapOf("", IsADirectoryException.class));
+					client.moveAll(Map.of("file", "newFile", "", "newRoot")));
+			assertBatchException(exception, Map.of("", IsADirectoryException.class));
 		});
 	}
 
@@ -784,11 +750,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllToRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"file2", ""
-					)));
-			assertBatchException(exception, mapOf("file2", IsADirectoryException.class));
+					client.moveAll(Map.of("file", "newFile", "file2", "")));
+			assertBatchException(exception, Map.of("file2", IsADirectoryException.class));
 		});
 	}
 
@@ -796,11 +759,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllToFileOutsideRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"file2", "../new"
-					)));
-			assertBatchException(exception, mapOf("file2", ForbiddenPathException.class));
+					client.moveAll(Map.of("file", "newFile", "file2", "../new")));
+			assertBatchException(exception, Map.of("file2", ForbiddenPathException.class));
 		});
 	}
 
@@ -808,24 +768,22 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllFromFileOutsideRoot() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"../new", "newFile2"
-					)));
-			assertBatchException(exception, mapOf("../new", ForbiddenPathException.class));
+					client.moveAll(Map.of("file", "newFile", "../new", "newFile2")));
+			assertBatchException(exception, Map.of("../new", ForbiddenPathException.class));
 		});
 	}
 
 	@Test
 	public void moveAllNotIdempotent() {
 		both(client -> {
-			await(client.moveAll(mapOf("file", "newFile", "file2", "newFile2")));
+			await(client.moveAll(Map.of("file", "newFile", "file2", "newFile2")));
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"file2", "newFile2"
-					)));
-			assertBatchException(exception, mapOf("file", FileNotFoundException.class));
+					client.moveAll(Map.of("file", "newFile", "file2", "newFile2")));
+
+			assertBatchException(exception, 1, 2, (name, e) -> {
+				assertTrue(name.startsWith("file"));
+				assertThat(e, instanceOf(FileNotFoundException.class));
+			});
 		});
 		assertFilesAreSame(firstPath, secondPath);
 	}
@@ -836,12 +794,9 @@ public final class TestLocalActiveFsInvariants {
 			FileMetadata oldMeta1 = await(client.info("file"));
 			FileMetadata oldMeta2 = await(client.info("file2"));
 
-			await(Promises.delay(getDelay(oldMeta1.getTimestamp())));
+			await(Promises.delay(10));
 
-			await(client.moveAll(mapOf(
-					"file", "newFile",
-					"file2", "newFile2"
-			)));
+			await(client.moveAll(Map.of("file", "newFile", "file2", "newFile2")));
 
 			FileMetadata newMeta1 = await(client.info("newFile"));
 			FileMetadata newMeta2 = await(client.info("newFile2"));
@@ -860,10 +815,7 @@ public final class TestLocalActiveFsInvariants {
 		byte[] bytesBefore1 = Files.readAllBytes(firstPath.resolve("file"));
 		byte[] bytesBefore2 = Files.readAllBytes(firstPath.resolve("file2"));
 
-		both(client -> await(client.moveAll(mapOf(
-				"file", "file",
-				"file2", "newFile2"
-		))));
+		both(client -> await(client.moveAll(Map.of("file", "file", "file2", "newFile2"))));
 
 		bothPaths(path -> {
 			assertThat(listPaths(path), not(contains(Paths.get("file2"))));
@@ -877,11 +829,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllWithSelfNonExistent() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"nonexistent", "nonexistent"
-					)));
-			assertBatchException(exception, mapOf("nonexistent", FileNotFoundException.class));
+					client.moveAll(Map.of("file", "newFile", "nonexistent", "nonexistent")));
+			assertBatchException(exception, Map.of("nonexistent", FileNotFoundException.class));
 		});
 	}
 
@@ -889,11 +838,8 @@ public final class TestLocalActiveFsInvariants {
 	public void moveAllWithSelfDirectory() {
 		both(client -> {
 			Exception exception = awaitException(
-					client.moveAll(mapOf(
-							"file", "newFile",
-							"directory", "directory"
-					)));
-			assertBatchException(exception, mapOf("directory", IsADirectoryException.class));
+					client.moveAll(Map.of("file", "newFile", "directory", "directory")));
+			assertBatchException(exception, Map.of("directory", IsADirectoryException.class));
 		});
 	}
 	//endregion
@@ -902,7 +848,7 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void infoAllEmpty() {
 		both(client -> {
-			Map<String, FileMetadata> result = await(client.infoAll(emptySet()));
+			Map<String, FileMetadata> result = await(client.infoAll(Set.of()));
 			assertTrue(result.isEmpty());
 		});
 	}
@@ -910,7 +856,7 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void infoAllSingle() {
 		both(client -> {
-			Map<String, FileMetadata> result = await(client.infoAll(singleton("file")));
+			Map<String, FileMetadata> result = await(client.infoAll(Set.of("file")));
 			assertEquals(1, result.size());
 			assertEquals("file", first(result.keySet()));
 		});
@@ -919,16 +865,16 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void infoAllMultiple() {
 		both(client -> {
-			Map<String, FileMetadata> result = await(client.infoAll(setOf("file", "file2")));
+			Map<String, FileMetadata> result = await(client.infoAll(Set.of("file", "file2")));
 			assertEquals(2, result.size());
-			assertEquals(setOf("file", "file2"), result.keySet());
+			assertEquals(Set.of("file", "file2"), result.keySet());
 		});
 	}
 
 	@Test
 	public void infoAllMultipleWithMissing() {
 		both(client -> {
-			Map<String, FileMetadata> result = await(client.infoAll(setOf("file", "nonexistent")));
+			Map<String, FileMetadata> result = await(client.infoAll(Set.of("file", "nonexistent")));
 			assertEquals(1, result.size());
 			assertEquals("file", first(result.keySet()));
 		});
@@ -937,7 +883,7 @@ public final class TestLocalActiveFsInvariants {
 	@Test
 	public void infoAllWithAllMissing() {
 		both(client -> {
-			Map<String, FileMetadata> result = await(client.infoAll(setOf("nonexistent", "nonexistent2")));
+			Map<String, FileMetadata> result = await(client.infoAll(Set.of("nonexistent", "nonexistent2")));
 			assertEquals(0, result.size());
 		});
 	}
