@@ -64,7 +64,6 @@ import static io.activej.async.callback.Callback.toAnotherEventloop;
 import static io.activej.common.Utils.nonNullElseGet;
 import static io.activej.common.Utils.not;
 import static io.activej.net.socket.tcp.AsyncTcpSocketSsl.wrapClientSocket;
-import static java.util.Collections.emptySet;
 import static java.util.stream.Collectors.toList;
 import static org.slf4j.LoggerFactory.getLogger;
 
@@ -178,7 +177,7 @@ public final class RpcClient implements IRpcClient, EventloopService, WithInitia
 	 * @return client instance capable for handling provided message types
 	 */
 	public RpcClient withMessageTypes(Class<?>... messageTypes) {
-		return withMessageTypes(Arrays.asList(messageTypes));
+		return withMessageTypes(List.of(messageTypes));
 	}
 
 	/**
@@ -533,7 +532,7 @@ public final class RpcClient implements IRpcClient, EventloopService, WithInitia
 	private static final class NoServersStrategy implements RpcStrategy {
 		@Override
 		public Set<InetSocketAddress> getAddresses() {
-			return emptySet();
+			return Set.of();
 		}
 
 		@Override
@@ -630,7 +629,7 @@ public final class RpcClient implements IRpcClient, EventloopService, WithInitia
 
 	@JmxAttribute
 	public List<String> getUnresponsiveServers() {
-		if (stopPromise != null) return Collections.emptyList();
+		if (stopPromise != null) return List.of();
 
 		return connectsStatsPerAddress.entrySet().stream()
 				.filter(entry -> !entry.getValue().isConnected())
