@@ -2,24 +2,23 @@ package io.activej.http.decoder;
 
 import org.junit.Test;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-import static io.activej.common.Utils.listOf;
 import static org.junit.Assert.*;
 
 public class DecodeErrorsTest {
 	@Test
 	public void testMergeWithTheSame() {
 		DecodeErrors tree = DecodeErrors.create();
-		tree.with(listOf(DecodeError.of("test1"),
+		tree.with(List.of(DecodeError.of("test1"),
 				DecodeError.of("test2"),
 				DecodeError.of("test3"),
 				DecodeError.of("test4")));
 
 		DecodeErrors tree2 = DecodeErrors.create();
-		tree.with(listOf(DecodeError.of("test11"),
+		tree.with(List.of(DecodeError.of("test11"),
 				DecodeError.of("test22"),
 				DecodeError.of("test33"),
 				DecodeError.of("test44")));
@@ -33,7 +32,7 @@ public class DecodeErrorsTest {
 		DecodeErrors tree = DecodeErrors.of("Test");
 		assertTrue(tree.hasErrors());
 
-		assertEquals(Collections.emptySet(), tree.getChildren());
+		assertEquals(Set.of(), tree.getChildren());
 		assertEquals(1, tree.toMap().size());
 		assertNull(tree.getChild("$"));
 		assertEquals(1, tree.toMap().size());
