@@ -2,11 +2,8 @@ package io.activej.serializer;
 
 import io.activej.codegen.expression.Expression;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
-
-import static java.util.Collections.emptySet;
 
 public abstract class AbstractSerializerDef implements SerializerDef {
 	@Override
@@ -15,7 +12,7 @@ public abstract class AbstractSerializerDef implements SerializerDef {
 
 	@Override
 	public Set<Integer> getVersions() {
-		return emptySet();
+		return Set.of();
 	}
 
 	@Override
@@ -30,21 +27,21 @@ public abstract class AbstractSerializerDef implements SerializerDef {
 
 	@Override
 	public Map<Object, Expression> getEncoderInitializer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 
 	@Override
 	public Map<Object, Expression> getDecoderInitializer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 
 	@Override
 	public Map<Object, Expression> getEncoderFinalizer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 
 	@Override
 	public Map<Object, Expression> getDecoderFinalizer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 }
