@@ -6,7 +6,6 @@ import org.junit.Test;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 
@@ -35,17 +34,11 @@ public class StreamCodecsTest {
 
 	@Test
 	public void ofHeterogeneousArray() {
-		StreamCodec<Object[]> codec = StreamCodecs.ofArray(value -> {
-			switch (value % 3) {
-				case 0:
-					return StreamCodecs.ofInt();
-				case 1:
-					return StreamCodecs.ofString();
-				case 2:
-					return StreamCodecs.ofBoolean();
-				default:
-					throw new AssertionError();
-			}
+		StreamCodec<Object[]> codec = StreamCodecs.ofArray(value -> switch (value % 3) {
+			case 0 -> StreamCodecs.ofInt();
+			case 1 -> StreamCodecs.ofString();
+			case 2 -> StreamCodecs.ofBoolean();
+			default -> throw new AssertionError();
 		}, Object[]::new);
 		Object[] objects = {0, "x", true, 12, "y", false, 34, "11241"};
 		Object[] result = doTest(codec, objects);
@@ -56,7 +49,7 @@ public class StreamCodecsTest {
 	@Test
 	public void ofList() {
 		StreamCodec<List<String>> codec = StreamCodecs.ofList(StreamCodecs.ofString());
-		List<String> strings = Arrays.asList("a", "b", "c");
+		List<String> strings = List.of("a", "b", "c");
 		List<String> result = doTest(codec, strings);
 
 		assertEquals(strings, result);
@@ -64,19 +57,13 @@ public class StreamCodecsTest {
 
 	@Test
 	public void ofHeterogeneousList() {
-		StreamCodec<List<Object>> codec = StreamCodecs.ofList(value -> {
-			switch (value % 3) {
-				case 0:
-					return StreamCodecs.ofInt();
-				case 1:
-					return StreamCodecs.ofString();
-				case 2:
-					return StreamCodecs.ofBoolean();
-				default:
-					throw new AssertionError();
-			}
+		StreamCodec<List<Object>> codec = StreamCodecs.ofList(value -> switch (value % 3) {
+			case 0 -> StreamCodecs.ofInt();
+			case 1 -> StreamCodecs.ofString();
+			case 2 -> StreamCodecs.ofBoolean();
+			default -> throw new AssertionError();
 		});
-		List<Object> objects = Arrays.asList(0, "x", true, 12, "y", false, 34, "11241");
+		List<Object> objects = List.of(0, "x", true, 12, "y", false, 34, "11241");
 		List<Object> result = doTest(codec, objects);
 
 		assertEquals(objects, result);
@@ -140,7 +127,7 @@ public class StreamCodecsTest {
 	@Test
 	public void ofVarIntArrayList() {
 		StreamCodec<List<int[]>> codec = StreamCodecs.ofList(StreamCodecs.ofVarIntArray());
-		List<int[]> expected = Arrays.asList(
+		List<int[]> expected = List.of(
 				new int[]{-1, -2, -3},
 				new int[]{1, 2, 3},
 				new int[]{-1, 0, 1},
@@ -158,7 +145,7 @@ public class StreamCodecsTest {
 	@Test
 	public void ofVarLongArrayList() {
 		StreamCodec<List<long[]>> codec = StreamCodecs.ofList(StreamCodecs.ofVarLongArray());
-		List<long[]> expected = Arrays.asList(
+		List<long[]> expected = List.of(
 				new long[]{-1, -2, -3},
 				new long[]{1, 2, 3},
 				new long[]{-1, 0, 1},
