@@ -3,14 +3,13 @@ import io.activej.serializer.SerializerBuilder;
 import io.activej.serializer.annotations.Deserialize;
 import io.activej.serializer.annotations.Serialize;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class GenericsAndInterfacesExample {
 	public static void main(String[] args) {
 		//[START REGION_4]
 		Developer developer = new Developer();
-		developer.setSkills(Arrays.asList(
+		developer.setSkills(List.of(
 				new Skill<>(1, "Java"),
 				new Skill<>(2, "ActiveJ")));
 
